@@ -6,6 +6,7 @@ Changes since 2.4.14:
 Lib/
 * Added missing modules ldap.controls.openldap and 
   ldap.controls.pwdpolicy to setup.py
+* Added missing imports to ldap.controls.pwdpolicy
 
 Modules/
 
@@ -1087,4 +1088,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.312 2014/03/12 20:29:23 stroeder Exp $
+$Id: CHANGES,v 1.313 2014/03/12 20:30:50 stroeder Exp $
